add 3D and wave effect

--- a/Button/3D.html
+++ b/Button/3D.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<title>3D button</title>
 	<style>
-		div {
+		button {
+			border: none;
+			outline: none;
+			color: #fff;
 			position: absolute;
 			top: 50px;
 			left: 100px;
 			cursor: pointer;
-			color: #fff;
 			background-color: #BA55D3;
 			font-family: "Arial";
 			font-weight: 700;
@@ -17,21 +19,21 @@
 			display: block;
 			padding: 4px;
 			border-radius: 8px;
-			box-shadow: 0px 9px 0px #9932CC, 0px 9px 18px rgba(0, 0, 0, .7);
 			margin: 100px auto;
-			width: 160px;
+			width: 300px;
 			text-align: center;
 			-webkit-transition: all .1s ease;
 			-moz-transition: all .1s ease;
 			transition: all .1s ease;
+			box-shadow: 0px 9px 0px #9932CC, 0px 9px 18px rgba(0, 0, 0, .7);
 		}
-		div:active {
+		button:active {
 			box-shadow: 0px 3px 0px #9932CC, 0px 3px 6px rgba(0, 0, 0, .9);
 			top: 56px;
 		}
 	</style>
 </head>
 <body>
-	<div>Click it!</div>
+	<button>Click it!</botton>
 </body>
 </html>
